@@ -229,7 +229,7 @@ public class Component {
     private static final Pattern IMAGE_TAG_PATTERN = Pattern.compile(
         "^(?<version>(?<major>\\d+)"
             + "(?:\\.(?<minor>\\d+))?"
-            + "(?:\\.(?<patch>\\d+))?"
+            + "(?:\\.(?<patch>\\d+)[^0-9-]*)?"
             + "(?:-(?<suffix>(?:alpha|beta)(?<suffixversion>\\d+)))?)"
             + "(?:-build-(?<build>(?<buildmajor>\\d+)"
             + "(?:\\.(?<buildminor>\\d+)(?:-dev)?)?))$");
@@ -320,6 +320,20 @@ public class Component {
       return compare;
     }
 
+    public int compareToBuild(String build) {
+      int indexOfSeparator = build.indexOf('.');
+      if (indexOfSeparator < 1) {
+        throw new IllegalArgumentException(build + " is not a build version");
+      }
+      int buildMajor = Integer.parseInt(build.substring(0, indexOfSeparator));
+      int buildMinor = Integer.parseInt(build.substring(indexOfSeparator + 1));
+      int compare = major.compareTo(buildMajor);
+      if (compare == 0 && minor != null) {
+        compare = minor.compareTo(buildMinor);
+      }
+      return compare;
+    }
+
     @Override
     public int hashCode() {
       final int prime = 31;
@@ -348,14 +362,14 @@ public class Component {
 
   public Optional<String> findLatestImageName() {
     return findImageName(StackGresComponent.LATEST, Seq.seq(this.subComponents)
-        .map(alternativeSubComponents -> alternativeSubComponents.get(0))
+        .map(alternativeSubComponents -> alternativeSubComponents.getFirst())
         .collect(ImmutableMap.toImmutableMap(
             Function.identity(), subComponent -> StackGresComponent.LATEST)));
   }
 
   public String getLatestImageName() {
     return getImageName(StackGresComponent.LATEST, Seq.seq(this.subComponents)
-        .map(alternativeSubComponents -> alternativeSubComponents.get(0))
+        .map(alternativeSubComponents -> alternativeSubComponents.getFirst())
         .collect(ImmutableMap.toImmutableMap(
             Function.identity(), subComponent -> StackGresComponent.LATEST)));
   }
@@ -367,15 +381,7 @@ public class Component {
   public Optional<String> findImageName(String version,
       Map<Component, String> subComponentVersions) {
     checkSubComponents(subComponentVersions);
-    return streamOrderedComposedVersions()
-        .filter(cv -> isVersion(version, cv.getVersion()))
-        .filter(cv -> Seq.seq(cv.getSubVersions())
-            .zipWithIndex()
-            .map(subVersion -> Tuple.tuple(
-                subComponents.get(subVersion.v2.intValue()).get(subVersion.v1.v1),
-                subVersion.v1.v2))
-            .allMatch(subVersion -> subComponentVersions.containsKey(subVersion.v1)
-                && isVersion(subComponentVersions.get(subVersion.v1), subVersion.v2)))
+    return findComposedVersion(version, subComponentVersions)
         .map(ComposedVersion::getImageName)
         .findFirst();
   }
@@ -405,8 +411,23 @@ public class Component {
         .map(ImageVersion::getVersion);
   }
 
+  public Optional<String> findVersion(String version,
+      Map<Component, String> subComponentVersions) {
+    return findComposedVersion(version, subComponentVersions)
+        .map(ComposedVersion::getVersion)
+        .map(ImageVersion::getVersion)
+        .findFirst();
+  }
+
   public String getVersion(String version) {
     return findVersion(version)
+        .orElseThrow(() -> new IllegalArgumentException(
+            this.name + " version " + version + " not available"));
+  }
+
+  public String getVersion(String version,
+      Map<Component, String> subComponentVersions) {
+    return findVersion(version, subComponentVersions)
         .orElseThrow(() -> new IllegalArgumentException(
             this.name + " version " + version + " not available"));
   }
@@ -440,15 +461,7 @@ public class Component {
   public Optional<String> findBuildVersion(String version,
       Map<Component, String> subComponentVersions) {
     checkSubComponents(subComponentVersions);
-    return streamOrderedComposedVersions()
-        .filter(cv -> isVersion(version, cv.getVersion()))
-        .filter(cv -> Seq.seq(cv.getSubVersions())
-            .zipWithIndex()
-            .map(subVersion -> Tuple.tuple(
-                subComponents.get(subVersion.v2.intValue()).get(subVersion.v1.v1),
-                subVersion.v1.v2))
-            .allMatch(subVersion -> subComponentVersions.containsKey(subVersion.v1)
-                && isVersion(subComponentVersions.get(subVersion.v1), subVersion.v2)))
+    return findComposedVersion(version, subComponentVersions)
         .map(ComposedVersion::getVersion)
         .map(ImageVersion::getBuild)
         .findFirst();
@@ -560,6 +573,19 @@ public class Component {
   @Override
   public String toString() {
     return name;
+  }
+
+  private Seq<ComposedVersion> findComposedVersion(String version, Map<Component, String> subComponentVersions) {
+    checkSubComponents(subComponentVersions);
+    return streamOrderedComposedVersions()
+        .filter(cv -> isVersion(version, cv.getVersion()))
+        .filter(cv -> Seq.seq(cv.getSubVersions())
+            .zipWithIndex()
+            .map(subVersion -> Tuple.tuple(
+                subComponents.get(subVersion.v2.intValue()).get(subVersion.v1.v1),
+                subVersion.v1.v2))
+            .allMatch(subVersion -> subComponentVersions.containsKey(subVersion.v1)
+                && isVersion(subComponentVersions.get(subVersion.v1), subVersion.v2)));
   }
 
   private void checkSubComponents(Map<Component, String> subComponentVersions) {
