@@ -41,8 +41,8 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
   protected final Reconciliator<T> reconciliator;
   protected final S handlerSelector;
   private final ExecutorService executorService;
-  private final AtomicReference<ImmutableList<Optional<H>>> atomicReference =
-      new AtomicReference<>(ImmutableList.of());
+  private final AtomicReference<List<Optional<H>>> atomicReference =
+      new AtomicReference<>(List.of());
   private final ArrayBlockingQueue<Boolean> arrayBlockingQueue = new ArrayBlockingQueue<>(1);
 
   private final CompletableFuture<Void> stopped = new CompletableFuture<>();
@@ -66,18 +66,18 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
 
   public void stop() {
     close = true;
-    reconcile(ImmutableList.of());
+    reconcile(List.of());
     executorService.shutdown();
-    reconcile(ImmutableList.of());
+    reconcile(List.of());
     stopped.join();
   }
 
   public void reconcileAll() {
-    reconcile(ImmutableList.of(Optional.empty()));
+    reconcile(List.of(Optional.empty()));
   }
 
   public void reconcile(H existingContextResource) {
-    reconcile(ImmutableList.of(Optional.of(existingContextResource)));
+    reconcile(List.of(Optional.of(existingContextResource)));
   }
 
   @SuppressFBWarnings(value = "RV_RETURN_VALUE_IGNORED_BAD_PRACTICE",
@@ -86,7 +86,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     atomicReference.updateAndGet(atomicExistingContextResources -> Seq
         .seq(atomicExistingContextResources)
         .append(existingContextResources)
-        .collect(ImmutableList.toImmutableList()));
+        .toList());
     arrayBlockingQueue.offer(true);
   }
 
@@ -95,14 +95,14 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     while (true) {
       try {
         arrayBlockingQueue.take();
-        ImmutableList<Optional<H>> existingContextResources =
-            atomicReference.getAndSet(ImmutableList.of());
+        List<Optional<H>> existingContextResources =
+            atomicReference.getAndSet(List.of());
         if (close) {
           break;
         }
         reconciliationCycle(existingContextResources);
       } catch (Exception ex) {
-        logger.error(name + " reconciliation cycle loop was interrupted", ex);
+        logger.error("{} reconciliation cycle loop was interrupted", name, ex);
       }
     }
     logger.info("{} reconciliation cycle loop stopped", name);
@@ -110,36 +110,35 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
   }
 
   public synchronized ReconciliationCycleResult<H> reconciliationCycle(
-      ImmutableList<Optional<H>> requestedContextResources) {
+      List<Optional<H>> requestedContextResources) {
     final ImmutableMap.Builder<H, Exception> contextExceptions = ImmutableMap.builder();
     final int cycleId = reconciliationCount.incrementAndGet();
     final String cycleName = cycleId + "| " + name + " reconciliation cycle";
 
     logger.trace("{} starting", cycleName);
     logger.trace("{} getting existing {} list", cycleName, name.toLowerCase(Locale.US));
-    final ImmutableList<Tuple2<H, Boolean>> contextResources;
+    final List<Tuple2<H, Boolean>> contextResources;
 
     try {
       if (requestedContextResources.stream().anyMatch(Optional::isEmpty)) {
         contextResources = getExistingContextResources()
             .stream()
             .map(existingContextResource -> Tuple.tuple(existingContextResource, false))
-            .collect(ImmutableList.toImmutableList());
+            .toList();
       } else {
         contextResources = Seq.seq(requestedContextResources)
             .map(Optional::get)
             .grouped(this::getRequestedContextResourceKey)
             .flatMap(t -> t.v2.limit(1))
-            .map(requestedContextResource -> Tuple.tuple(requestedContextResource, false))
-            .collect(ImmutableList.toImmutableList());
+            .map(requestedContextResource -> Tuple.tuple(requestedContextResource, true))
+            .toList();
       }
     } catch (RuntimeException ex) {
-      logger.error(cycleName + " failed", ex);
+      logger.error("{} failed", cycleName, ex);
       try {
         onError(ex);
       } catch (RuntimeException rex) {
-        logger.error(cycleName
-            + " failed sending event while retrieving reconciliation cycle contexts", rex);
+        logger.error("{} failed sending event while retrieving reconciliation cycle contexts", cycleName, rex);
       }
       return new ReconciliationCycleResult<>(ex);
     }
@@ -161,7 +160,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
 
         try {
           logger.trace("{} working on {}", cycleName, contextId);
-          ImmutableList<HasMetadata> existingResourcesOnly = getExistingResources(
+          List<HasMetadata> existingResourcesOnly = getExistingResources(
               client,
               context);
           T contextWithExistingResourcesOnly = getContextWithExistingResourcesOnly(
@@ -170,16 +169,16 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
                   .stream()
                   .map(existingResource -> Tuple.tuple(existingResource,
                       Optional.<HasMetadata>empty()))
-                  .collect(ImmutableList.toImmutableList()));
-          ImmutableList<HasMetadata> requiredResourcesOnly = getRequiredResources(
+                  .toList());
+          List<HasMetadata> requiredResourcesOnly = getRequiredResources(
               contextWithExistingResourcesOnly);
-          ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources =
+          List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources =
               existingResourcesOnly
                   .stream()
                   .map(existingResource -> Tuple.tuple(existingResource,
                       findResourceIn(existingResource, requiredResourcesOnly)))
-                  .collect(ImmutableList.toImmutableList());
-          ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources =
+                  .toList();
+          List<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources =
               requiredResourcesOnly
                   .stream()
                   .map(requiredResource -> Tuple.tuple(requiredResource,
@@ -187,7 +186,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
                           .filter(Optional::isPresent)
                           .orElseGet(
                               () -> handlerSelector.find(client, context, requiredResource))))
-                  .collect(ImmutableList.toImmutableList());
+                  .toList();
           T contextWithExistingAndRequiredResources = getContextWithExistingAndRequiredResources(
               context, requiredResources, existingResources);
           ReconciliationResult<?> reconciliationResult =
@@ -197,24 +196,24 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
           }
         } catch (Exception ex) {
           contextExceptions.put(exisitingContextResource, ex);
-          logger.error(cycleName + " failed reconciling " + contextId, ex);
+          logger.error("{} failed reconciling {}", cycleName, contextId, ex);
           try {
             onConfigError(context, exisitingContextResource, ex);
           } catch (RuntimeException rex) {
-            logger.error(cycleName + " failed sending event while reconciling " + contextId, rex);
+            logger.error("{} failed sending event while reconciling {}", cycleName, contextId, rex);
           }
         }
       }
-      logger.trace(cycleName + " ended successfully");
+      logger.trace("{} ended successfully", cycleName);
       return new ReconciliationCycleResult<>(
           existingContextResourcesBuilder.build(),
           contextExceptions.build());
     } catch (RuntimeException ex) {
-      logger.error(cycleName + " failed", ex);
+      logger.error("{} failed", cycleName, ex);
       try {
         onError(ex);
       } catch (RuntimeException rex) {
-        logger.error(cycleName + " failed sending event while running reconciliation cycle", rex);
+        logger.error("{} failed sending event while running reconciliation cycle", cycleName, rex);
       }
       return new ReconciliationCycleResult<>(ex);
     }
@@ -227,10 +226,10 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
 
   public static class ReconciliationCycleResult<T extends CustomResource<?, ?>> {
     private final List<T> contextResources;
-    private final ImmutableMap<T, Exception> contextResourceExceptions;
+    private final Map<T, Exception> contextResourceExceptions;
     private final Exception exception;
 
-    public ReconciliationCycleResult(ImmutableList<T> contextResources,
+    public ReconciliationCycleResult(List<T> contextResources,
         ImmutableMap<T, Exception> contextExceptions) {
       this.contextResources = contextResources;
       this.contextResourceExceptions = contextExceptions;
@@ -238,8 +237,8 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     }
 
     public ReconciliationCycleResult(Exception exception) {
-      this.contextResources = ImmutableList.of();
-      this.contextResourceExceptions = ImmutableMap.of();
+      this.contextResources = List.of();
+      this.contextResourceExceptions = Map.of();
       this.exception = exception;
     }
 
@@ -280,17 +279,17 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
       HasMetadata contextResource, Exception ex);
 
   protected abstract T getContextWithExistingResourcesOnly(T context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly);
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly);
 
-  protected abstract ImmutableList<HasMetadata> getRequiredResources(T context);
+  protected abstract List<HasMetadata> getRequiredResources(T context);
 
   protected abstract T getContextWithExistingAndRequiredResources(
       T context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources);
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources);
 
   private Optional<HasMetadata> findResourceIn(HasMetadata resource,
-      ImmutableList<HasMetadata> resources) {
+      List<HasMetadata> resources) {
     return resources
         .stream()
         .filter(otherResource -> resource.getKind()
@@ -302,14 +301,14 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
         .findAny();
   }
 
-  protected abstract ImmutableList<H> getExistingContextResources();
+  protected abstract List<H> getExistingContextResources();
 
   protected abstract H getExistingContextResource(H contextResource);
 
   protected abstract T getContextFromResource(H contextResource);
 
-  private ImmutableList<HasMetadata> getExistingResources(KubernetesClient client, T context) {
-    return handlerSelector.getResources(client, context).collect(ImmutableList.toImmutableList());
+  private List<HasMetadata> getExistingResources(KubernetesClient client, T context) {
+    return handlerSelector.getResources(client, context).toList();
   }
 
 }
