@@ -21,22 +21,22 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.json.JsonMapper;
 import io.fabric8.kubernetes.api.model.Endpoints;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.ObjectMeta;
-import io.stackgres.common.ClusterStatefulSetEnvVars;
+import io.stackgres.common.ClusterEnvVar;
 import io.stackgres.common.PatroniUtil;
 import io.stackgres.common.StackGresContext;
 import io.stackgres.common.StackGresVersion;
 import io.stackgres.common.StringUtil;
-import io.stackgres.common.crd.sgbackupconfig.StackGresBackupConfig;
+import io.stackgres.common.YamlMapperProvider;
 import io.stackgres.common.crd.sgcluster.StackGresCluster;
 import io.stackgres.common.crd.sgcluster.StackGresClusterReplicateFrom;
 import io.stackgres.common.crd.sgcluster.StackGresClusterReplicateFromExternal;
 import io.stackgres.common.crd.sgcluster.StackGresClusterReplicateFromInstance;
 import io.stackgres.common.crd.sgcluster.StackGresClusterReplicateFromStorage;
 import io.stackgres.common.crd.sgcluster.StackGresClusterStatus;
+import io.stackgres.common.crd.sgobjectstorage.StackGresObjectStorage;
 import io.stackgres.common.crd.sgpgconfig.StackGresPostgresConfig;
 import io.stackgres.common.crd.sgpgconfig.StackGresPostgresConfigStatus;
 import io.stackgres.common.fixture.Fixtures;
@@ -45,8 +45,8 @@ import io.stackgres.common.labels.ClusterLabelMapper;
 import io.stackgres.common.labels.LabelFactoryForCluster;
 import io.stackgres.common.patroni.PatroniConfig;
 import io.stackgres.operator.conciliation.cluster.StackGresClusterContext;
-import io.stackgres.operator.conciliation.factory.cluster.patroni.parameters.PostgresBlocklist;
-import io.stackgres.operator.conciliation.factory.cluster.patroni.parameters.PostgresDefaultValues;
+import io.stackgres.operator.conciliation.factory.cluster.postgres.PostgresBlocklist;
+import io.stackgres.operator.conciliation.factory.cluster.postgres.PostgresDefaultValues;
 import io.stackgres.testutil.JsonUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -57,31 +57,31 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class PatroniConfigEndpointsTest {
 
-  private static final JsonMapper JSON_MAPPER = JsonUtil.jsonMapper();
-  private final LabelFactoryForCluster<StackGresCluster> labelFactory = new ClusterLabelFactory(
+  private final LabelFactoryForCluster labelFactory = new ClusterLabelFactory(
       new ClusterLabelMapper());
   @Mock
   private StackGresClusterContext context;
   private PatroniConfigEndpoints generator;
   private StackGresCluster cluster;
-  private StackGresBackupConfig backupConfig;
+  private StackGresObjectStorage objectStorage;
   private StackGresPostgresConfig postgresConfig;
 
   @BeforeEach
   void setUp() {
-    generator = new PatroniConfigEndpoints(JSON_MAPPER, labelFactory);
+    generator = new PatroniConfigEndpoints(
+        labelFactory, JsonUtil.jsonMapper(), new YamlMapperProvider());
 
     cluster = Fixtures.cluster().loadDefault().get();
     cluster.getMetadata().getAnnotations()
         .put(StackGresContext.VERSION_KEY, StackGresVersion.LATEST.getVersion());
     cluster.getSpec().setDistributedLogs(null);
     cluster.getSpec().getMetadata().getLabels().setServices(null);
-    backupConfig = Fixtures.backupConfig().loadDefault().get();
+    objectStorage = Fixtures.objectStorage().loadDefault().get();
     postgresConfig = Fixtures.postgresConfig().loadDefault().get();
     postgresConfig.setStatus(new StackGresPostgresConfigStatus());
     setDefaultParameters(postgresConfig);
 
-    lenient().when(context.getBackupConfig()).thenReturn(Optional.of(backupConfig));
+    lenient().when(context.getObjectStorage()).thenReturn(Optional.of(objectStorage));
     lenient().when(context.getPostgresConfig()).thenReturn(postgresConfig);
   }
 
@@ -89,92 +89,6 @@ class PatroniConfigEndpointsTest {
     final String version = postgresConfig.getSpec().getPostgresVersion();
     postgresConfig.getStatus()
         .setDefaultParameters(PostgresDefaultValues.getDefaultValues(version));
-  }
-
-  @Test
-  void getPostgresConfigValues_shouldConfigureBackupParametersIfArePresent() {
-    when(context.getBackupConfig()).thenReturn(Optional.of(backupConfig));
-    when(context.getBackupStorage()).thenCallRealMethod();
-    when(context.getPostgresConfig()).thenReturn(postgresConfig);
-    when(context.getSource()).thenReturn(cluster);
-    when(context.getCluster()).thenReturn(cluster);
-
-    Map<String, String> pgParams = generator.getPostgresConfigValues(context);
-
-    assertTrue(pgParams.containsKey("archive_command"));
-    final String expected = "exec-with-env '" + ClusterStatefulSetEnvVars.BACKUP_ENV.value(cluster)
-        + "' -- wal-g wal-push %p";
-    assertEquals(expected, pgParams.get("archive_command"));
-  }
-
-  @Test
-  void getPostgresRecoveryConfigValues_shouldConfigureBackupParametersIfArePresent() {
-    when(context.getBackupConfig()).thenReturn(Optional.of(backupConfig));
-    when(context.getBackupStorage()).thenCallRealMethod();
-    when(context.getPostgresConfig()).thenReturn(postgresConfig);
-    when(context.getSource()).thenReturn(cluster);
-
-    Map<String, String> pgRecoveryParams = generator.getPostgresRecoveryConfigValues(context);
-
-    assertTrue(pgRecoveryParams.containsKey("restore_command"));
-    final String expected = "exec-with-env '" + ClusterStatefulSetEnvVars.BACKUP_ENV.value(cluster)
-        + "' -- wal-g wal-fetch %f %p";
-    assertEquals(expected, pgRecoveryParams.get("restore_command"));
-  }
-
-  @Test
-  void getPostgresConfigValues_shouldNotConfigureBackupParametersIfAreNotPresent() {
-    when(context.getBackupStorage()).thenReturn(Optional.empty());
-    when(context.getPostgresConfig()).thenReturn(postgresConfig);
-    when(context.getSource()).thenReturn(cluster);
-    when(context.getCluster()).thenReturn(cluster);
-
-    Map<String, String> pgParams = generator.getPostgresConfigValues(context);
-
-    assertTrue(pgParams.containsKey("archive_command"));
-    assertEquals("/bin/true", pgParams.get("archive_command"));
-  }
-
-  @Test
-  void getPostgresConfigValues_shouldConfigurePgParameters() {
-    when(context.getBackupConfig()).thenReturn(Optional.of(backupConfig));
-    when(context.getBackupStorage()).thenCallRealMethod();
-    when(context.getPostgresConfig()).thenReturn(postgresConfig);
-    when(context.getSource()).thenReturn(cluster);
-    when(context.getCluster()).thenReturn(cluster);
-
-    Map<String, String> pgParams = generator.getPostgresConfigValues(context);
-
-    postgresConfig.getSpec().getPostgresqlConf().forEach((key, value) -> {
-      assertTrue(pgParams.containsKey(key));
-      assertEquals(value, pgParams.get(key));
-    });
-  }
-
-  @Test
-  void getPostgresConfigValues_shouldNotModifyBlockedValuesIfArePresent() {
-    when(context.getBackupStorage()).thenReturn(Optional.empty());
-    when(context.getPostgresConfig()).thenReturn(postgresConfig);
-    when(context.getSource()).thenReturn(cluster);
-    when(context.getCluster()).thenReturn(cluster);
-
-    final String version = postgresConfig.getSpec().getPostgresVersion();
-    Map<String, String> defValues = PostgresDefaultValues.getDefaultValues(version);
-
-    defValues.forEach((key, value) -> {
-      postgresConfig.getSpec().getPostgresqlConf().put(key, StringUtil.generateRandom());
-    });
-
-    Map<String, String> pgParams = generator.getPostgresConfigValues(context);
-
-    Set<String> blocklistedKeys = PostgresBlocklist.getBlocklistParameters();
-    defValues.forEach((key, value) -> {
-      assertTrue(pgParams.containsKey(key));
-      if (blocklistedKeys.contains(key)) {
-        assertEquals(value, pgParams.get(key), "Blocklisted parameter " + key + " with value "
-            + value + " has been modified with value " + pgParams.get(key));
-      }
-    });
   }
 
   @Test
@@ -191,7 +105,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -222,7 +136,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -260,7 +174,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -299,7 +213,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -341,7 +255,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -385,7 +299,7 @@ class PatroniConfigEndpointsTest {
     final Map<String, String> annotations = endpoints.getMetadata().getAnnotations();
     assertTrue(annotations.containsKey(PatroniUtil.CONFIG_KEY));
 
-    PatroniConfig patroniConfig = JSON_MAPPER
+    PatroniConfig patroniConfig = JsonUtil.jsonMapper()
         .readValue(annotations.get(PatroniUtil.CONFIG_KEY),
             PatroniConfig.class);
     final String version = postgresConfig.getSpec().getPostgresVersion();
@@ -412,7 +326,7 @@ class PatroniConfigEndpointsTest {
   private Endpoints generateEndpoint() {
     when(context.getSource()).thenReturn(cluster);
     when(context.getCluster()).thenReturn(cluster);
-    when(context.getBackupConfig()).thenReturn(Optional.of(backupConfig));
+    when(context.getObjectStorage()).thenReturn(Optional.of(objectStorage));
     when(context.getBackupStorage()).thenCallRealMethod();
     when(context.getPostgresConfig()).thenReturn(postgresConfig);
 
@@ -421,11 +335,75 @@ class PatroniConfigEndpointsTest {
 
     assertFalse(endpoints.isEmpty());
 
-    final Endpoints endpoint = (Endpoints) endpoints.get(0);
+    final Endpoints endpoint = (Endpoints) endpoints.getFirst();
     assertNotNull(endpoint.getMetadata());
     assertNotNull(endpoint.getMetadata().getLabels());
     assertNotNull(endpoint.getMetadata().getAnnotations());
     return endpoint;
+  }
+
+  @Test
+  void getPostgresConfigValues_shouldConfigureBackupParametersIfArePresent() {
+    Map<String, String> pgParams = generator.getPostgresConfigValues(
+        cluster, postgresConfig, true);
+
+    assertTrue(pgParams.containsKey("archive_command"));
+    final String expected = "exec-with-env '" + ClusterEnvVar.BACKUP_ENV.value(cluster)
+        + "' -- wal-g wal-push %p";
+    assertEquals(expected, pgParams.get("archive_command"));
+  }
+
+  @Test
+  void getPostgresRecoveryConfigValues_shouldConfigureBackupParametersIfArePresent() {
+    Map<String, String> pgRecoveryParams = generator.getPostgresRecoveryConfigValues(
+        cluster, postgresConfig, true, false);
+
+    assertTrue(pgRecoveryParams.containsKey("restore_command"));
+    final String expected = "exec-with-env '" + ClusterEnvVar.BACKUP_ENV.value(cluster)
+        + "' -- wal-g wal-fetch %f %p";
+    assertEquals(expected, pgRecoveryParams.get("restore_command"));
+  }
+
+  @Test
+  void getPostgresConfigValues_shouldNotConfigureBackupParametersIfAreNotPresent() {
+    Map<String, String> pgParams = generator.getPostgresConfigValues(
+        cluster, postgresConfig, false);
+
+    assertTrue(pgParams.containsKey("archive_command"));
+    assertEquals("/bin/true", pgParams.get("archive_command"));
+  }
+
+  @Test
+  void getPostgresConfigValues_shouldConfigurePgParameters() {
+    Map<String, String> pgParams = generator.getPostgresConfigValues(
+        cluster, postgresConfig, true);
+
+    postgresConfig.getSpec().getPostgresqlConf().forEach((key, value) -> {
+      assertTrue(pgParams.containsKey(key));
+      assertEquals(value, pgParams.get(key));
+    });
+  }
+
+  @Test
+  void getPostgresConfigValues_shouldNotModifyBlockedValuesIfArePresent() {
+    final String version = postgresConfig.getSpec().getPostgresVersion();
+    Map<String, String> defValues = PostgresDefaultValues.getDefaultValues(version);
+
+    defValues.forEach((key, value) -> {
+      postgresConfig.getSpec().getPostgresqlConf().put(key, StringUtil.generateRandom());
+    });
+
+    Map<String, String> pgParams = generator.getPostgresConfigValues(
+        cluster, postgresConfig, false);
+
+    Set<String> blocklistedKeys = PostgresBlocklist.getBlocklistParameters();
+    defValues.forEach((key, value) -> {
+      assertTrue(pgParams.containsKey(key));
+      if (blocklistedKeys.contains(key)) {
+        assertEquals(value, pgParams.get(key), "Blocklisted parameter " + key + " with value "
+            + value + " has been modified with value " + pgParams.get(key));
+      }
+    });
   }
 
 }
