@@ -5,9 +5,9 @@
 
 package io.stackgres.operator.conciliation.factory.shardedcluster;
 
-import static io.stackgres.common.StackGresShardedClusterForCitusUtil.CERTIFICATE_KEY;
-import static io.stackgres.common.StackGresShardedClusterForCitusUtil.PRIVATE_KEY_KEY;
-import static io.stackgres.common.StackGresShardedClusterForCitusUtil.postgresSslSecretName;
+import static io.stackgres.common.StackGresShardedClusterUtil.CERTIFICATE_KEY;
+import static io.stackgres.common.StackGresShardedClusterUtil.PRIVATE_KEY_KEY;
+import static io.stackgres.common.StackGresShardedClusterUtil.postgresSslSecretName;
 import static org.mockito.Mockito.when;
 
 import java.io.ByteArrayInputStream;
@@ -62,10 +62,10 @@ class ShardedPostgresSslSecretTest {
 
     Assertions.assertEquals(1, generateResources.size());
     Assertions.assertEquals(postgresSslSecretName(cluster),
-        generateResources.get(0)
+        generateResources.getFirst()
         .getMetadata()
         .getName());
-    Assertions.assertEquals(1, Optional.of(generateResources.get(0))
+    Assertions.assertEquals(2, Optional.of(generateResources.getFirst())
         .map(Secret.class::cast)
         .orElseThrow()
         .getData()
@@ -81,29 +81,29 @@ class ShardedPostgresSslSecretTest {
     var generateResources = postgresSslSecret.generateResource(context).toList();
 
     Assertions.assertEquals(postgresSslSecretName(cluster),
-        generateResources.get(0)
+        generateResources.getFirst()
         .getMetadata()
         .getName());
     Assertions.assertEquals(1, generateResources.size());
-    Assertions.assertTrue(Optional.of(generateResources.get(0))
+    Assertions.assertTrue(Optional.of(generateResources.getFirst())
         .map(Secret.class::cast)
         .map(Secret::getData)
         .map(data -> data.get(CERTIFICATE_KEY))
         .isPresent());
-    Assertions.assertTrue(Optional.of(generateResources.get(0))
+    Assertions.assertTrue(Optional.of(generateResources.getFirst())
         .map(Secret.class::cast)
         .map(Secret::getData)
         .map(data -> data.get(PRIVATE_KEY_KEY))
         .isPresent());
     checkCertificateAndPrivateKey(
         ResourceUtil.decodeSecret(
-            Optional.of(generateResources.get(0))
+            Optional.of(generateResources.getFirst())
             .map(Secret.class::cast)
             .map(Secret::getData)
             .map(data -> data.get(CERTIFICATE_KEY))
             .orElseThrow()),
         ResourceUtil.decodeSecret(
-            Optional.of(generateResources.get(0))
+            Optional.of(generateResources.getFirst())
             .map(Secret.class::cast)
             .map(Secret::getData)
             .map(data -> data.get(PRIVATE_KEY_KEY))
@@ -121,30 +121,30 @@ class ShardedPostgresSslSecretTest {
     var generateResources = postgresSslSecret.generateResource(context).toList();
 
     Assertions.assertEquals(postgresSslSecretName(cluster),
-        generateResources.get(0)
+        generateResources.getFirst()
         .getMetadata()
         .getName());
     Assertions.assertEquals(1, generateResources.size());
-    Assertions.assertTrue(Optional.of(generateResources.get(0))
+    Assertions.assertTrue(Optional.of(generateResources.getFirst())
         .map(Secret.class::cast)
         .map(Secret::getData)
         .map(data -> data.get(CERTIFICATE_KEY))
         .isPresent());
     Assertions.assertEquals("test-certificate",
         ResourceUtil.decodeSecret(
-            Optional.of(generateResources.get(0))
+            Optional.of(generateResources.getFirst())
             .map(Secret.class::cast)
             .map(Secret::getData)
             .map(data -> data.get(CERTIFICATE_KEY))
             .orElseThrow()));
-    Assertions.assertTrue(Optional.of(generateResources.get(0))
+    Assertions.assertTrue(Optional.of(generateResources.getFirst())
         .map(Secret.class::cast)
         .map(Secret::getData)
         .map(data -> data.get(PRIVATE_KEY_KEY))
         .isPresent());
     Assertions.assertEquals("test-private-key",
         ResourceUtil.decodeSecret(
-            Optional.of(generateResources.get(0))
+            Optional.of(generateResources.getFirst())
             .map(Secret.class::cast)
             .map(Secret::getData)
             .map(data -> data.get(PRIVATE_KEY_KEY))
@@ -154,8 +154,8 @@ class ShardedPostgresSslSecretTest {
   private void checkCertificateAndPrivateKey(String certificate, String privateKey)
       throws Exception {
     String strippedPrivateKey = privateKey
-            .replace("-----BEGIN RSA PRIVATE KEY-----\n", "")
-            .replace("\n-----END RSA PRIVATE KEY-----\n", "");
+            .replace("-----BEGIN PRIVATE KEY-----\n", "")
+            .replace("\n-----END PRIVATE KEY-----\n", "");
     byte[] decoded = Base64.getDecoder().decode(strippedPrivateKey);
 
     PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
